add contact form

--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@
                 </table>
             </div>
         </section>
-
+        <section id="contact" class="card">
+            <h2>Contacto</h2>
+            <form class="contact-form">
+                <input type="text" placeholder="Tu Nombre">
+                <input type="text" placeholder="Motivo de Contacto">
+                <input type="email" placeholder="Tu Correo">
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
     </div>
 </body>
 </html>
